Moved all connector related code to separate module - needed for compiling against Java 11 so custom connector gets loaded