@@ -2,6 +2,8 @@ package bbejeck.chapter_5.connector;
 
 
 import org.apache.kafka.common.config.ConfigException;
+import org.apache.kafka.connect.source.SourceConnector;
+import org.jetbrains.annotations.Contract;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -9,7 +11,12 @@ import org.junit.jupiter.api.Test;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
+
 
 class StockTickerSourceConnectorTest {
 
@@ -43,7 +50,7 @@ class StockTickerSourceConnectorTest {
     @Test
     @DisplayName("Connector should throw exception because ticker symbol list is greater than 100")
     void testThrowsExceptionTickerSymbolsOver100() {
-        String symbols = String.join(",", Stream.generate(() -> "CFLT").limit(101).toList());
+        String symbols = Stream.generate(() -> "CFLT").limit(101).collect(Collectors.joining(","));
         Map<String, String> userConfig = Map.of("api.url", "https://stock-ticker", "topic", "foo", "batch.size", "100", "symbols", symbols, "token", "abcdefg");
         ConfigException configException = Assertions.assertThrows(ConfigException.class,
                 () -> sourceConnector.start(userConfig),
@@ -54,7 +61,7 @@ class StockTickerSourceConnectorTest {
     @Test
     @DisplayName("Connector should only have one config group because max.tasks is one")
     void testShouldHaveOneConfigList() {
-        String symbols = String.join(",", Stream.generate(() -> "CFLT").limit(10).toList());
+        String symbols = String.join(",", Stream.generate(() -> "CFLT").limit(10).collect(Collectors.toList()));
         Map<String, String> userConfig = Map.of("api.url", "https://stock-ticker", "topic", "foo", "batch.size", "100", "symbols", symbols, "token", "abcdefg");
         sourceConnector.start(userConfig);
         List<Map<String, String>> configList = sourceConnector.taskConfigs(1);
@@ -64,10 +71,19 @@ class StockTickerSourceConnectorTest {
     @Test
     @DisplayName("Connector should five config groups because max.tasks is five")
     void testShouldHaveFiveConfigList() {
-        String symbols = String.join(",", Stream.generate(() -> "CFLT").limit(10).toList());
+        String symbols = String.join(",", Stream.generate(() -> "CFLT").limit(10).collect(Collectors.toList()));
         Map<String, String> userConfig = Map.of("api.url", "https://stock-ticker", "topic", "foo", "batch.size", "100", "symbols", symbols, "token", "abcdefg");
         sourceConnector.start(userConfig);
         List<Map<String, String>> configList = sourceConnector.taskConfigs(5);
         Assertions.assertEquals(5, configList.size());
     }
+
+    @Contract(value = " -> fail", pure = true)
+    @Test
+    @DisplayName("Connector should be assignable from base Connector")
+    void testShouldBeAssignable() {
+        
+        assertThat(SourceConnector.class.isAssignableFrom(StockTickerSourceConnector.class), is(true));
+    }
+
 }
